Fixed rkl sage animation page styling and spacing

--- a/rkl/css/default.scss
+++ b/rkl/css/default.scss
@@ -124,7 +124,7 @@ h1{
 
 h3{
   text-align: left;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .ui.list>.item .header {
